New Lockscreens BlackBerry and Optimus 4x 2/2
    Multidpi lockscreens based on evilistos idea

    - add ability to use BlackBerry styled lockscreen
    - add ability to use Optimus 4x styled lockscreen
    - ass settings shows on choosen lockscreen customized Lockscreensettings
    - add ability to set transparent lockscreen
    - code cleanup
    - and a lot other small stuff

Change-Id: I2dfa75be9aa0890dadb3f1b3b858eea05f9df2e8

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -45,7 +45,104 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="lockscreen_style_options_blackberry"
+        android:title="@string/lockscreen_style_options_title">
+        
+        <ListPreference
+            android:key="lockscreen_clock_align"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_clock_align_title"
+            android:title="@string/lockscreen_clock_align_title"
+            android:entries="@array/lockscreen_clock_align_entries"
+            android:entryValues="@array/lockscreen_clock_align_values"/>
+        
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_text_color"
+            android:title="@string/lockscreen_text_color_title"
+            android:defaultValue="#ffffffff" />
+     
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_style_options_circles"
+        android:title="@string/lockscreen_style_options_title">
+        
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_text_color"
+            android:title="@string/lockscreen_text_color_title"
+            android:defaultValue="#ffffffff" />
+     
+    </PreferenceCategory>
+
+    <PreferenceCategory
+            android:key="circles_lockscreen"
+            android:title="@string/circles_lock_cat_title">
+
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="circles_lock_bg_color"
+                android:title="@string/circles_lock_bg_color_title"
+                android:defaultValue="#D2000000" />
+
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="circles_lock_ring_color"
+                android:title="@string/circles_lock_ring_color_title"
+                android:defaultValue="#FFFFFFFF" />
+
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="circles_lock_halo_color"
+                android:title="@string/circles_lock_halo_color_title"
+                android:defaultValue="#FFFFFFFF" />
+
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="circles_lock_wave_color"
+                android:title="@string/circles_lock_wave_color_title"
+                android:defaultValue="#D2FFFFFF" />
+    </PreferenceCategory>
+
+
+
+    <PreferenceCategory
         android:key="lockscreen_interface_options"
+        android:title="@string/lockscreen_interface_options_title">
+
+        <ListPreference
+            android:key="lockscreen_widgets"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_widgets_title"
+            android:title="@string/lockscreen_widgets_title"
+            android:entries="@array/lockscreen_widgets_entries"
+            android:entryValues="@array/lockscreen_widgets_values"
+            android:summary="@string/lockscreen_widgets_summary" />
+
+        <Preference
+            android:fragment="com.android.settings.cnd.LockscreenTargets"
+            android:key="lockscreen_targets"
+            android:summary="@string/lockscreen_target_summary"
+            android:title="@string/lockscreen_target_title" />
+
+        <ListPreference
+            android:key="lockscreen_battery_status"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_battery_status_title"
+            android:title="@string/lockscreen_battery_status_title"
+            android:entries="@array/lockscreen_battery_status_entries"
+            android:entryValues="@array/lockscreen_battery_status_values"/>
+
+        <Preference
+            android:fragment="com.android.settings.cnd.Weather"
+            android:key="lockscreen_weather"
+            android:summary="@string/lockscreen_weather_summary"
+            android:title="@string/lockscreen_weather_title" />
+
+        <Preference
+            android:fragment="com.android.settings.cnd.Calendar"
+            android:key="lockscreen_calendar"
+            android:summary="@string/lockscreen_calendar_summary"
+            android:title="@string/lockscreen_calendar_title" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_interface_options_alt"
         android:title="@string/lockscreen_interface_options_title">
 
         <ListPreference
@@ -68,38 +165,28 @@
             android:summary="@string/lockscreen_calendar_summary"
             android:title="@string/lockscreen_calendar_title" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="additional_options"
+        android:title="@string/additional_options_title">
+
         <PreferenceScreen
             android:key="screen_security"
             android:fragment="com.android.settings.cnd.ScreenSecurity"
             android:title="@string/screen_security_category"
             android:summary="@string/screen_security_summary" />
 
-        <ListPreference
-            android:key="lockscreen_widgets"
-            android:persistent="false"
-            android:dialogTitle="@string/lockscreen_widgets_title"
-            android:title="@string/lockscreen_widgets_title"
-            android:entries="@array/lockscreen_widgets_entries"
-            android:entryValues="@array/lockscreen_widgets_values"
-            android:summary="@string/lockscreen_widgets_summary" />
+         <PreferenceScreen
+            android:fragment="com.android.settings.cnd.LockscreenButtons"   
+            android:key="lockscreen_buttons"
+            android:title="@string/lockscreen_buttons_title"
+            android:summary="@string/lockscreen_buttons_summary" />
 
-        <Preference
-            android:fragment="com.android.settings.cnd.LockscreenTargets"
-            android:key="lockscreen_targets"
-            android:summary="@string/lockscreen_target_summary"
-            android:title="@string/lockscreen_target_title" />
-
-     <PreferenceScreen
-        android:fragment="com.android.settings.cnd.LockscreenButtons"
-        android:key="lockscreen_buttons"
-        android:title="@string/lockscreen_buttons_title"
-        android:summary="@string/lockscreen_buttons_summary" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="additional_options"
-        android:title="@string/additional_options_title">
+        <CheckBoxPreference
+            android:key="lockscreen_transparent"
+            android:title="@string/lockscreen_transparent_enabled_title"	       
+            android:summary="@string/lockscreen_transparent_enabled_head"/>
 
         <CheckBoxPreference
             android:key="lockscreen_vibrate"
