--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -173,7 +173,7 @@
 
         <PreferenceScreen
             android:key="screen_security"
-            android:fragment="com.android.settings.cnd.ScreenSecurity"
+            android:fragment="com.android.settings.SecuritySettings"
             android:title="@string/screen_security_category"
             android:summary="@string/screen_security_summary" />
 
