--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -57,6 +57,10 @@
         <com.android.settings.widgets.SeekBarPreference
              android:key="notification_wallpaper_alpha"
              android:title="@string/notif_wallpaper_alpha_title" />
+	
+	<com.android.settings.widgets.SeekBarPreference
+             android:key="notification_alpha"
+             android:title="@string/notif_alpha_title" />
 
     </PreferenceCategory>
 
