Lockscreen fixes and features Part 2/2 settings
- change to using integrated instances now
- several fixes for music transport controlls
- BB tablet support
- better peformance optimus lockscreen on hdpi devices
- lockscreen background transparency moved to background customization and works on the fly now
- lockscreen background 0-100% alpha can be activated on colorfill and custom background
- clock moved in settings to widget behaviour. Style could be customized now + hidden feature
- if clock is hidden status1 and owner info will be centered automatically
- owner info can be shown on lockscreen
- optimus and BB lockscreen can now be colored and alpha as you like
- optimus background settings deleted cause of stock background customization ability
- ability to choose one of the custom lockscreen before secure lockscreens
- vibration support for optimus and BB
- whole lockscreen settings are working dynamically now and show just what is possible to customize
- code clean up
- png clean up
- a lot small stuff

PatchSet 2 + 3

- cleanup whitespace errors

PatchSet 4

- commit update

PatchSet 5

- fix FC on custom targets in settings

PatchSet 6

- fix glitch of alpha slider lockscreen background
- some tabs cleanup on old files

PatchSet 7
- also set background for circle screen to a nicer one if default was standard (worked till now only on lockbeforeunlock)
- a bit cosmetic and final one

Change-Id: If4618dab8770afb12f279d45f4759b0b62c42da5

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1294,9 +1294,10 @@
         <item>2</item>
     </string-array>
 
-    <string-array name="lockscreen_background_entries" translatable="false">
+    <string-array name="lockscreen_background_entries">
         <item>@string/lockscreen_background_color_fill</item>
         <item>@string/lockscreen_background_custom_image</item>
+        <item>@string/lockscreen_background_full_transparent</item>
         <item>@string/lockscreen_background_default_wallpaper</item>
     </string-array>
 
@@ -1304,6 +1305,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <!-- DHCP lease times for tethering settings -->
@@ -1920,6 +1922,20 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+    </string-array>
+
+    <string-array name="lockpattern_settings_enable_lock_before_unlock_entries">
+        <item>@string/unlock_set_unlock_mode_none</item>
+        <item>@string/unlock_set_unlock_mode_blackberry</item>
+        <item>@string/unlock_set_unlock_mode_circles</item>
+        <item>@string/disabled</item>
+    </string-array>
+
+    <string-array name="lockpattern_settings_enable_lock_before_unlock_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="navring_dialog_entries">
