Fixes and feature notification drawer 2/2 Settings
- fix custom background image landscape (scales now)
- fix stock background...now not transparent any more on 0%
- moved whole style options in style category @settings
- add support for custom landscape background
- add support for background color fill
- reset of background image not any longer over menu
- changed code to easy port it to 4.2
- code clean up

PatchSet 2

- clean up tabs all files

PatchSet 3+4

- small issue landcape settings entry/summary wasn't visual updated if other portrait was choosen -> fixed

PatchSet 5

- last change for PatchSet 3+4

PatchSet 6

- fix merging conflict

Change-Id: I64e16701f1c46b428f0a2c22ef8a7d0cd8d90062

Conflicts:

	res/values/arrays.xml

--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -17,6 +17,16 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <PreferenceCategory
+       android:title="@string/notification_style_grouptitle">
+
+         <Preference
+            android:fragment="com.android.settings.cnd.NotificationDrawerStyle"
+            android:key="notification_style"
+            android:title="@string/notification_style_title"
+            android:summary="@string/notification_style_summary" />
+    </PreferenceCategory>
+
     <!-- Notification drawer Power Widget -->
     <PreferenceCategory
        android:title="@string/power_widget_title">
@@ -48,20 +58,6 @@
             android:entryValues="@array/brightness_location_values"
             android:title="@string/brightness_location_title" 
             android:dependency="expanded_widget" />
-
-         <Preference
-            android:key="notification_wallpaper"
-            android:title="@string/notification_wallpaper_title"
-            android:summary="@string/notification_wallpaper_summary" />
-
-        <com.android.settings.widgets.SeekBarPreference
-             android:key="notification_wallpaper_alpha"
-             android:title="@string/notif_wallpaper_alpha_title" />
-	
-	<com.android.settings.widgets.SeekBarPreference
-             android:key="notification_alpha"
-             android:title="@string/notif_alpha_title" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
