--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1308,6 +1308,28 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="notification_wallpaper_entries">
+        <item>@string/notification_background_color_fill</item>
+        <item>@string/notification_background_custom_image</item>
+        <item>@string/notification_background_default_wallpaper</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_landscape_entries">
+        <item>@string/notification_background_custom_image</item>
+        <item>@string/notification_background_default_wallpaper</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_landscape_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- DHCP lease times for tethering settings -->
     <string-array name="tethering_lease_time_entries">
         <item>@string/dhcp_lease_30mn</item>
@@ -1747,78 +1769,78 @@
 
     <!-- NavBar -->
     <string-array name="pref_navigation_menu_entries">
-		<item>Right</item>
-		<item>Left</item>
-		<item>Both</item>
-		<item>Remove</item>
-	</string-array>
+        <item>Right</item>
+        <item>Left</item>
+        <item>Both</item>
+        <item>Remove</item>
+    </string-array>
     
-	<!-- right is the default, easier to keep 0 as first index -->
-	<string-array name="pref_navigation_menu_values"
-		translatable="false">
-		<item>0</item>
-		<item>1</item>
-		<item>2</item>
-		<item>4</item>
-	</string-array>
+    <!-- right is the default, easier to keep 0 as first index -->
+    <string-array name="pref_navigation_menu_values"
+        translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>4</item>
+    </string-array>
     
-	<string-array name="pref_navigation_menu_display_entries">
-		<item>Default JB behavior</item>
-		<item>Always show invisible icons</item>
-		<item>Always show</item>
-		<item>Default JB with invisible icons when hidden</item>
-	</string-array>
+    <string-array name="pref_navigation_menu_display_entries">
+        <item>Default JB behavior</item>
+        <item>Always show invisible icons</item>
+        <item>Always show</item>
+        <item>Default JB with invisible icons when hidden</item>
+    </string-array>
     
-	<string-array name="pref_navigation_menu_display_values" translatable="false">
-		<item>0</item>
-		<item>1</item>
-		<item>2</item>
-		<item>3</item>
-	</string-array>
-	
-	<string-array name="navigation_bar_qty_entries">
-		<item>1</item>
-		<item>2</item>
-		<item>3</item>
-		<item>4</item>
-		<item>5</item>
-	</string-array>
+    <string-array name="pref_navigation_menu_display_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
     
-	<string-array name="navigation_bar_qty_values" translatable="false">
-		<item>1</item>
-		<item>2</item>
-		<item>3</item>
-		<item>4</item>
-		<item>5</item>
-	</string-array>
+    <string-array name="navigation_bar_qty_entries">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
     
-	<string-array name="navbar_button_entries">
-		<item>Home</item>
-		<item>Back</item>
-		<item>Recents</item>
-		<item>Search</item>
-		<item>Menu</item>
-		<item>Toggle Widgets</item>
-		<item>Kill app</item>
-		<item>Power</item>
+    <string-array name="navigation_bar_qty_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    
+    <string-array name="navbar_button_entries">
+        <item>Home</item>
+        <item>Back</item>
+        <item>Recents</item>
+        <item>Search</item>
+        <item>Menu</item>
+        <item>Toggle Widgets</item>
+        <item>Kill app</item>
+        <item>Power</item>
         <item>Notifications</item>
-		<item>Custom app</item>
-		<item>Blank</item>
-	</string-array>
+        <item>Custom app</item>
+        <item>Blank</item>
+    </string-array>
     
-	<string-array name="navbar_button_values" translatable="false">
-		<item>**home**</item>
-		<item>**back**</item>
-		<item>**recents**</item>
-		<item>**search**</item>
-		<item>**menu**</item>
-		<item>**widgets**</item>
-		<item>**kill**</item>
-		<item>**power**</item>
+    <string-array name="navbar_button_values" translatable="false">
+        <item>**home**</item>
+        <item>**back**</item>
+        <item>**recents**</item>
+        <item>**search**</item>
+        <item>**menu**</item>
+        <item>**widgets**</item>
+        <item>**kill**</item>
+        <item>**power**</item>
         <item>**notifications**</item>
-		<item>**app**</item>
-		<item>**null**</item>
-	</string-array>
+        <item>**app**</item>
+        <item>**null**</item>
+    </string-array>
     
     <string-array name="navigation_bar_width_entries">
         <item>42 dp (default)</item>
