--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -57,6 +57,15 @@
         android:breadCrumbTitle="@string/wireless_networks_settings_title"
         android:fragment="com.android.settings.WirelessSettings"
         android:icon="@drawable/empty_icon" />
+    <!-- ROM -->
+    <header android:title="@string/header_category_rom_settings" />
+
+    <!-- Interface -->
+    <header
+        android:id="@+id/interface_settings"
+        android:icon="@drawable/ic_settings_slim"
+        android:fragment="com.android.settings.slim.InterfaceSettings"
+        android:title="@string/interface_settings_title" />
 
     <!-- DEVICE -->
     <header android:id="@+id/device_section"
