(2) Forward port Quiet hours
to slim

PatchSet2
- now correct....sorry

Patchset 3
- rebased
- whitespace cleanup

Change-Id: I5b880e8353cb3171c14d14501877c6b55d384a6d

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -74,6 +74,13 @@
         android:fragment="com.android.settings.profiles.ProfilesSettings"
         android:title="@string/profiles_settings_title" />
 
+    <!-- Quiet hours -->
+    <header
+        android:id="@+id/quiet_hours_settings"
+        android:icon="@drawable/ic_settings_quiet_hours"
+        android:fragment="com.android.settings.slim.QuietHours"
+        android:title="@string/quiet_hours_title" />
+
     <!-- DEVICE -->
     <header android:id="@+id/device_section"
         android:title="@string/header_category_device" />
