(6) Forward port About Slim
with updated URLImageViewHelper

Patchset2
- cleanup

Change-Id: Iac4b87db343c70c67cc092b4798f5ecdf8e2ac9b

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -81,6 +81,13 @@
         android:fragment="com.android.settings.slim.QuietHours"
         android:title="@string/quiet_hours_title" />
 
+    <!-- About Slim -->
+    <header
+        android:id="@+id/about_rom"
+        android:fragment="com.android.settings.slim.About"
+        android:icon="@drawable/ic_settings_about_slim"
+        android:title="@string/title_about" />
+
     <!-- DEVICE -->
     <header android:id="@+id/device_section"
         android:title="@string/header_category_device" />
