--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -30,4 +30,9 @@
         android:title="@string/power_menu_title"
         android:fragment="com.android.settings.slim.PowerMenu" />
 
+    <PreferenceScreen
+        android:key="sound_settings"
+        android:fragment="com.android.settings.slim.SoundSettings"
+        android:title="@string/sound_title" />
+
 </PreferenceScreen>
