--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -35,4 +35,9 @@
         android:fragment="com.android.settings.slim.SoundSettings"
         android:title="@string/sound_title" />
 
+    <PreferenceScreen
+        android:key="status_bar"
+        android:fragment="com.android.settings.slim.StatusBar"
+        android:title="@string/status_bar_title" />
+
 </PreferenceScreen>
