(13) Forward port LCD Wizard dpi changer
Hint: You need busybox for it

Patchset 2:
- cleanup

Change-Id: I7b22749b2ebb14a4d4fdeb944522097beee55705

--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -19,6 +19,10 @@
     android:title="@string/interface_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceScreen
+        android:key="general_ui_settings"
+        android:fragment="com.android.settings.slim.UserInterface"
+        android:title="@string/title_ui" />
 
     <PreferenceScreen
         android:key="notification_drawer"
