--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1034,4 +1034,31 @@
         <item>2</item>
     </string-array>
 
+ <string-array name="lcd_density_entries" translatable="false">
+        <item>160</item>
+        <item>182</item>
+        <item>200</item>
+        <item>220</item>
+        <item>240</item>
+        <item>241</item>
+        <item>268</item>
+        <item>280</item>
+        <item>300</item>
+        <item>320</item>
+        <item>340</item>
+        <item>@string/custom_density</item>
+    </string-array>
+
+    <string-array name="lcd_density_stock_entries">
+        <item>213 -- nexus7</item>
+        <item>240 -- hdpi</item>
+        <item>320 -- xhdpi</item>
+    </string-array>
+
+    <string-array name="lcd_density_stock_values" translatable="false">
+        <item>213</item>
+        <item>240</item>
+        <item>320</item>
+    </string-array>
+
 </resources>
