--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -28,6 +28,11 @@
     <!-- Show Expanded Desktop preference -->
     <bool name="config_show_expandedDesktop">true</bool>
 
+
+   <!-- Volume Rocker Wake Support. Some devices do not support (PMU) this.
+        Setting to false will disable Volume Rocker Wake support -->
+    <bool name="config_show_volumeRockerWake">true</bool>
+
     <!-- TODO: This is purely enforced by the interface, and does not affect what
          strings may be inserted into the actual content provider.
          With the addition of shortcuts, it seems more likely that users will
