--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -20,6 +20,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceScreen
+        android:key="display_settings"
+        android:fragment="com.android.settings.slim.DisplaySettings"
+        android:title="@string/display_title" />
+
+    <PreferenceScreen
         android:key="general_ui_settings"
         android:fragment="com.android.settings.slim.UserInterface"
         android:title="@string/title_ui" />
