Settings: Forward port ADB over network (Part 1 of 2)
Squashed commit of:
- Adb over network (Settings part for Jellybean)
  + Display WiFi IP Address & Port as preference summary.
  Note: adb_over_network were already pushed in 5555aae3
  Author: Tanguy Pruvot
  Id: Ia05aa8f6281c9bdcb3d5e62566b103c38bc70b82

- Settings : Fix mismatched dialog listener
  Set listener on correct dialog
  Author: Danesh Mondegarian
  Id: I0c05af859ad0e93ba6a1d3d395dc6c31e9949426

- ADB: missing dialog dismiss, and use updateCheckBox()
  this function check if debug features are enabled.
  Author: Tanguy Pruvot
  Id: I675a3a9ce5c28b16f9e13e78499e5f6f897b9dd3

- DevelopmentSettings: Refactor ADB over Network
  The checkbox would never enable adbd in tcpip mode.
  Author: Alexander Hofbauer
  Id: Iab8307bb91f69d85ed3a46d5ef09274fa8b03da

Change-Id: I46278919de941ae1b1212cf5c8c6f3ec7bf4d2ec

Conflicts:

	res/values/strings.xml

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1369,6 +1369,14 @@
         <item>4</item>
     </string-array>
 
+    <!-- Arrays for root access capability -->
+    <string-array name="root_access_entries">
+        <item>@string/root_access_none</item>
+        <item>@string/root_access_apps</item>
+        <item>@string/root_access_adb</item>
+        <item>@string/root_access_all</item>
+    </string-array>
+
     <!--- Volume key cursor control -->
     <string-array name="volume_key_cursor_control_entries">
         <item>@string/volume_key_cursor_control_off</item>
