--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -31,7 +31,7 @@
 
     <PreferenceScreen
         android:key="notification_drawer"
-        android:fragment="com.android.settings.slim.PowerWidget"
+        android:fragment="com.android.settings.slim.NotificationDrawerSettings"
         android:title="@string/notification_drawer_title" />
 
     <PreferenceScreen
