--- a/res/xml/lcd_density_setup.xml
+++ b/res/xml/lcd_density_setup.xml
@@ -21,7 +21,13 @@
 
     <Preference
         android:key="clear_market_data"
-        android:title="@string/clear_market_data_title" />
+        android:title="@string/clear_market_data_title"
+        android:summary="@string/clear_market_data_summary" />
+
+    <Preference
+        android:key="reboot_cleardata"
+        android:title="@string/reboot_cleardata_title"
+        android:summary="@string/reboot_cleardata_summary" />
 
     <Preference
         android:key="open_market"
