--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -81,6 +81,13 @@
         android:fragment="com.android.settings.slim.QuietHours"
         android:title="@string/quiet_hours_title" />
 
+    <!-- Performance -->
+    <header
+        android:id="@+id/performance_settings"
+        android:fragment="com.android.settings.slim.PerformanceSettings"
+        android:icon="@drawable/ic_settings_performance"
+        android:title="@string/performance_settings_title" />
+
     <!-- Themes -->
     <header
         android:id="@+id/themes_settings"
