--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1011,6 +1011,7 @@
         <item>@string/status_bar_battery_status_percentage</item>
         <item>@string/status_bar_battery_status_circle</item>
         <item>@string/status_bar_battery_status_circle_percentage</item>
+        <item>@string/status_bar_battery_status_dotted_circle</item>
         <item>@string/status_bar_style_hidden</item>
     </string-array>
 
@@ -1020,6 +1021,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <string-array name="entries_status_bar_signal" translatable="false">
