--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:key="misc"
-        android:title="@string/misc_short">
+        android:key="display"
+        android:title="@string/display_short">
 
         <PreferenceScreen
             android:key="lcd_density_setup"
@@ -13,4 +13,17 @@
             android:summary="@string/lcd_density_summary" />
 
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="misc"
+        android:title="@string/misc_short">
+
+        <CheckBoxPreference
+            android:key="use_alt_resolver"
+            android:title="@string/alt_resolver"
+            android:summary="@string/alt_resolver_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
