--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -30,6 +30,11 @@
         android:title="@string/title_ui" />
 
     <PreferenceScreen
+        android:key="keyboard_input_settings"
+        android:fragment="com.android.settings.slim.KeyboardInputSettings"
+        android:title="@string/title_keyboard_input" />
+
+    <PreferenceScreen
         android:key="notification_drawer"
         android:fragment="com.android.settings.slim.NotificationDrawerSettings"
         android:title="@string/notification_drawer_title" />
