--- a/res/xml/keyboard_input_settings.xml
+++ b/res/xml/keyboard_input_settings.xml
@@ -22,4 +22,12 @@
         android:summary="@string/disable_fullscreen_keyboard_summary"
         android:defaultValue="false" />
 
+    <ListPreference
+        android:key="volume_key_cursor_control"
+        android:persistent="false"
+        android:dialogTitle="@string/volume_key_cursor_control_title"
+        android:title="@string/volume_key_cursor_control_title"
+        android:entries="@array/volume_key_cursor_control_entries"
+        android:entryValues="@array/volume_key_cursor_control_values" />
+
 </PreferenceScreen>
