--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -45,8 +45,8 @@
         android:defaultValue="true" />
 
     <CheckBoxPreference
-        android:key="power_menu_silent"
-        android:title="@string/power_menu_silent_title"
+        android:key="power_menu_sound"
+        android:title="@string/power_menu_sound_title"
         android:defaultValue="true" />
 
 </PreferenceScreen>
