--- a/res/xml/keyboard_input_settings.xml
+++ b/res/xml/keyboard_input_settings.xml
@@ -22,6 +22,13 @@
         android:summary="@string/disable_fullscreen_keyboard_summary"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="status_bar_ime_switcher"
+        android:title="@string/ime_switcher_notify"
+        android:summary="@string/ime_switcher_notify_summary"
+        android:defaultValue="true"
+        android:persistent="false" />
+
     <ListPreference
         android:key="volume_key_cursor_control"
         android:persistent="false"
