wifi: Allow configuration of country code for wifi
Wifi country code handling is a nightmare - Most retail devices
have region customization in /system for each country a device
is shipped to.

This doesn't work very well for a firmware like Cyanogenmod,
where we try to support all target countries with one firmware
package. For whatever reason, with newer Broadcom drivers/
firmware blobs, the old trick of using a universal region code
(ccode=ALL in nvram_net.txt) does not seem to work. Who knows
what the deal is for other wifi chipsets.

The good thing is that wpa_supplicant has a standardized
cross-chipset method for setting the region code, and we
use that here.

also change General UI to General

Change-Id: I3567c377390b732f0e374aaf6039728c1df39760

--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -25,9 +25,9 @@
         android:title="@string/display_title" />
 
     <PreferenceScreen
-        android:key="general_ui_settings"
+        android:key="general_settings"
         android:fragment="com.android.settings.slim.UserInterface"
-        android:title="@string/title_ui" />
+        android:title="@string/title_slim_general" />
 
     <PreferenceScreen
         android:key="keyboard_input_settings"
