--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1377,6 +1377,13 @@
         <item>@string/root_access_all</item>
     </string-array>
 
+    <string-array name="root_access_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <!--- Volume key cursor control -->
     <string-array name="volume_key_cursor_control_entries">
         <item>@string/volume_key_cursor_control_off</item>
