Quick Settings Pulldown: Left or Right side option (2/2)
Patch set 2 : Update dynamic summary
Patch set 3 : More dynamic summary work
Patch set 4 : Fix arrays, reduce duplicate code
Patch set 5 : Fix string
Patch set 6 : One more string fix
Patch set 7 : String nitpick

--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -23,14 +23,16 @@
         android:title="@string/title_general" >
 
         <CheckBoxPreference
-            android:key="quick_pulldown"
-            android:title="@string/title_quick_pulldown"
-            android:summary="@string/summary_quick_pulldown" />
-
-        <CheckBoxPreference
             android:key="collapse_panel"
             android:title="@string/title_collapse_panel"
             android:summary="@string/summary_collapse_panel" />
+
+        <ListPreference
+            android:key="quick_pulldown"
+            android:title="@string/title_quick_pulldown"
+            android:entries="@array/quick_pulldown_entries"
+            android:entryValues="@array/quick_pulldown_values"
+            android:persistent="false" />
 
     </PreferenceCategory>
 
