--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -53,6 +53,13 @@
             android:entries="@array/entries_network_widget"
             android:entryValues="@array/values_network_widget" />
 
+        <ListPreference
+            android:key="pref_screentimeout_mode"
+            android:dialogTitle="@string/pref_screentimeout_mode_title"
+            android:title="@string/pref_screentimeout_mode_title"
+            android:entries="@array/entries_screentimeout_widget"
+            android:entryValues="@array/values_screentimeout_widget" />
+
         <MultiSelectListPreference
             android:key="pref_ring_mode"
             android:dialogTitle="@string/pref_ring_mode_title"
